--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             style="color: black;text-align: center;">
                             THE ULTIMATE TEST OF FRIENDSHIP DISGUISED AS A FOUR COLOURED CARD GAME
                         </h1>
-                        <button class="registration-button" onclick="showEventDetails('UNO CHAMPIONSHIP', 'the classic card game where friendships die as easily as they bloom. Just when you think youre about to win, someone gleefully drops a +4 Wild card, and your hopes crumble faster than a house of cards. Enjoy the thrill of color-matching chaos; remember, the only thing more certain than tomorrow is that someone will shout UNO! right before ruining your today.', 'img/logos/UNO CHAMPIONSHIP.png', ['Put your game face on and focus on those UNO strategies — yes, the ones that help you win, not just look confused.'], ['Rule 1: Individual registrations only (no co-op mode, sorry!)', 'Rule 2: The decision of the gamemaster is final. (Obviously, but you already knew).', 'Rule 3: Teams must comply with all rules and instructions provided by the event organizers. (DeMoCrAcy)', 'Rule 4: The event organizers reserve the right to modify the rules and format if it’s necessary. (Lets hope not)'], [{name: 'Lohith', contact: '+91 7338710188', position: 'Lead Organizer', image: 'img/persons/Event-8a.jpg'}, {name: 'Lukesh', contact: '+91 6369860174', position: 'Co-Organizer', image: 'img/persons/Event-8b.jpg'}],'https://forms.gle/rVvZbVqoanpWyxS69')">Details</button>
+                        <button class="registration-button" onclick="showEventDetails('UNO CHAMPIONSHIP', 'the classic card game where friendships die as easily as they bloom. Just when you think youre about to win, someone gleefully drops a +4 Wild card, and your hopes crumble faster than a house of cards. Enjoy the thrill of color-matching chaos; remember, the only thing more certain than tomorrow is that someone will shout UNO! right before ruining your today.', 'img/logos/UNO CHAMPIONSHIP.png', ['Put your game face on and focus on those UNO strategies — yes, the ones that help you win, not just look confused.'], ['Rule 1: Individual registrations only (no co-op mode, sorry!)', 'Rule 2: The decision of the gamemaster is final. (Obviously, but you already knew).', 'Rule 3: Teams must comply with all rules and instructions provided by the event organizers. (DeMoCrAcy)', 'Rule 4: The event organizers reserve the right to modify the rules and format if it’s necessary. (Lets hope not)'], [{name: 'Lohith', contact: '+91 7338710188', position: 'Lead Organizer', image: 'img/persons/Event-8b.jpg'}, {name: 'Lukesh', contact: '+91 6369860174', position: 'Co-Organizer', image: 'img/persons/Event-8a.jpg'}],'https://forms.gle/rVvZbVqoanpWyxS69')">Details</button>
 
                     </div>
                 </div>
@@ -682,7 +682,7 @@
                     <img src="img/persons/vishal_shakthi.jpg">
                 </div>
                 <div class="caption">
-                    <h3>Vishal Sahkthi M</h3>
+                    <h3>Vishal Sakthi M</h3>
                     <p>Secretary</p>
                     <div class="social-links">
                         <!-- <a href="#"><i class="fab fa-facebook"></i></a>
